# wecom-doc-sdk

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  skills-lock.json
.github/workflows/: publish.yml
examples/cli/: doc-admin.yaml  folder.yaml  scaffold.create.yaml  scaffold.use_existing.yaml  sheet.yaml  smartsheet.yaml  space-admin.yaml  space.yaml
references/: wecom-docs.md
src/: main.py
src/wecom_doc_sdk/: __init__.py  cli.py  client.py  exceptions.py
src/wecom_doc_sdk/apis/: __init__.py  document_content.py  documents.py  permissions.py  smartsheet.py  smartsheet_attachment.py  smartsheet_upload.py  uploads.py
src/wecom_doc_sdk/cli/: __init__.py  __main__.py  errors.py  main.py  models.py  templates.py  utils.py
src/wecom_doc_sdk/cli/commands/: __init__.py  doc.py  scaffold.py  smartsheet.py  space.py  template.py
src/wecom_doc_sdk/models/: __init__.py  common.py  document_content.py  documents.py  enums.py  fields.py  fields_models.py  fields_properties.py  groups.py  permissions.py  records.py  sheets.py  uploads.py  views.py
tests/: conftest.py  test_cli.py  test_client.py  test_document_content_api.py  test_documents_api.py  test_models_fields_compat.py  test_permissions_api.py  test_records_api.py  test_smartsheet_api.py  test_smartsheet_attachment.py  test_smartsheet_upload.py  test_uploads_api.py
tests/cli/: __init__.py  helpers.py  test_admin_cli.py  test_scaffold_cli.py  test_smartsheet_cli.py  test_space_cli.py  test_template_cli.py
