[project]
name = "wecom-doc-sdk"
version = "0.1.0"
description = "企业微信文档 SDK"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = ["httpx>=0.28.1", "pydantic>=2.12.5"]

[dependency-groups]
dev = [
    "black>=26.3.1", 
    "pytest>=9.0.2", 
    "ruff>=0.15.6", 
    "ty>=0.0.23"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
