[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wecom-doc-sdk"
version = "0.4.0"
description = "企业微信文档 SDK"
readme = "README.md"
requires-python = "~=3.10.0"
authors = [
  { name = "zzwtsy", email = "zzwtsy@yumdeb.top" },
]
keywords = ["wecom", "wechat-work", "docs", "smartsheet", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]
urls = { Homepage = "https://github.com/zzwtsy/wecom-doc-sdk", Repository = "https://github.com/zzwtsy/wecom-doc-sdk" }
dependencies = ["httpx>=0.28.1", "pydantic>=2.12.5", "PyYAML>=6.0.2"]

[project.scripts]
wecom-doc-sdk = "wecom_doc_sdk.cli:main"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=wecom_doc_sdk --cov-report=term-missing --cov-fail-under=80"
markers = [
    "integration: 依赖真实外部链路的集成测试",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wecom_doc_sdk"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
